# fastapi-shop-app

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.template  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27_1824_09_2ffe4155e11b_create_product_model.py  496648db1156_create_category_model.py  f0feb277e822_add_category_id_to_products.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py  cart.py  categories.py  products.py
backend/app/api/dependencies/: __init__.py  cart.py  category.py  product.py
backend/app/core/models/: base.py  category.py  db_helper.py  product.py
backend/app/core/schemas/: cart.py  category.py  product.py
backend/app/core/services/: cart.py  category.py  (+1 more)
backend/app/models/: __init__.py  base.py  category.py  db_helper.py  product.py
backend/core/: config.py
backend/core/models/: __init__.py  base.py  category.py  product.py
backend/core/schemas/: category.py  product.py
backend/core/services/: category.py
backend/utils/: __init__.py
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 1080c6a40ab3_init_models.py  667397ef2eef_add_cartitem_table.py
src/backend/: Dockerfile  main.py
src/backend/api/: __init__.py
src/backend/core/: __init__.py  config.py  exceptions.py  types.py
src/backend/services/: cart.py  category.py  product.py
src/backend/utils/: case_converter.py  seed_db.py
src/frontend/: index.html
src/frontend/js/: api.js  app.js
(+37 files in other folders)
